# slotstrike

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  deny.toml  slotstrike.example.toml  sniper.example.toml
.github/workflows/: pr-checks.yml  release.yml
docs/architecture/: runtime.md
docs/operations/: fpga_direct_ingress.md  fpga_nic_deployment.md
docs/runbooks/: oncall.md
fuzz/: Cargo.toml  check_tools.sh  run_all.sh
fuzz/fuzz_targets/: fuzz_fpga_dma_payload.rs  fuzz_log_parser.rs  fuzz_pool_filter.rs  fuzz_rule_primitives.rs  fuzz_sol_amount.rs
scripts/: devnet_bootstrap_and_snipe.sh
src/: lib.rs  main.rs
src/adapters/: fpga_feed.rs  mod.rs  network_path.rs  solana_logs.rs  toml_rules.rs
src/adapters/raydium/: constants.rs  instructions.rs  market.rs  mod.rs  pool.rs
src/app/: bootstrap.rs  context.rs  direct_leader_schedule.rs  errors.rs  logging.rs  mod.rs  readiness.rs  sof_runtime.rs  systemd.rs
src/domain/: config.rs  mod.rs  settings.rs
src/domain/aggregates/: mod.rs  rule_book.rs
src/domain/entities/: mod.rs  snipe_rule.rs
src/domain/events/: mod.rs
src/domain/services/: mod.rs  rule_matcher.rs
src/domain/specifications/: mod.rs  rule_matching.rs
src/domain/value_objects/: mod.rs  rule_primitives.rs  runtime.rs  sol_amount.rs
src/ports/: fpga_feed.rs  log_stream.rs  mod.rs  network_path.rs  rule_repository.rs
src/slices/: mod.rs
src/slices/config_sync/: service.rs
src/slices/sniper/: cache.rs  cpmm.rs  engine.rs  log_parser.rs  mod.rs  openbook.rs  pool_filter.rs  replay.rs  telemetry.rs
tests/: e2e_ingress_stack.rs  live_raydium_dry_run.rs
