[package]
name = "sniper"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
futures-util = "0.3.30"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
solana-client = "3.1.8"
solana-sdk = { version = "3.0.0", features = ["full"] }
solana-commitment-config = "3.1.0"
solana-compute-budget-interface = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode", "std"] }
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4"
solana-transaction-status = "3.1.8"
colored = "2.1.0"
solana-account-decoder = "3.1.8"
spl-token = "9.0.0"
spl-token-client = "0.18.0"
spl-associated-token-account = "8.0.0"
byteorder = "1.4"
arrayref = "0.3"
base64 = "0.22.1"
futures = "0.3.30"
chrono = "0.4.37"
bs58 = "0.5.1"
borsh = "1.5.1"
fern = { version = "0.6.2", features = ["colored"] }
trait-variant = "0.1.2"
toml = "0.8.19"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
debug = 2
opt-level = 0
overflow-checks = true
incremental = false
panic = "unwind"
lto = false

[features]
fuzzing = []
legacy-charts = []

[lints.rust]
rust_2024_prelude_collisions = "warn"
rust_2024_incompatible_pat = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
deprecated_safe_2024 = "warn"

[lints.clippy]
allow_attributes = "deny"
unwrap_used = "deny"
expect_used = "deny"
inefficient_to_string = "deny"
todo = "deny"
unimplemented = "deny"
panic = "deny"
result_large_err = "deny"
map_err_ignore = "deny"
unreachable = "deny"
dbg_macro = "deny"
ignored_unit_patterns = "deny"
await_holding_refcell_ref = "deny"
match_bool = "deny"
if_same_then_else = "deny"
needless_pass_by_value = "deny"
borrowed_box = "deny"
str_to_string = "deny"
filter_map_next = "deny"
iter_not_returning_iterator = "deny"
needless_collect = "deny"
wildcard_enum_match_arm = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
undocumented_unsafe_blocks = "deny"
let_underscore_must_use = "deny"
must_use_candidate = "deny"
match_wild_err_arm = "deny"
indexing_slicing = "deny"
panic_in_result_fn = "deny"
unwrap_in_result = "deny"
missing_const_for_fn = "deny"
implicit_clone = "deny"
redundant_clone = "deny"
lossy_float_literal = "deny"
unnecessary_wraps = "deny"
map_flatten = "deny"
or_fun_call = "deny"
ok_expect = "deny"
await_holding_lock = "deny"
mutex_atomic = "deny"
needless_borrow = "deny"
wildcard_dependencies = "deny"
enum_glob_use = "deny"
match_ref_pats = "deny"
wrong_self_convention = "deny"
trivially_copy_pass_by_ref = "deny"
ptr_arg = "deny"
needless_lifetimes = "deny"
mutable_key_type = "deny"
large_enum_variant = "deny"
vec_box = "deny"
float_cmp = "deny"
bool_assert_comparison = "deny"
cmp_owned = "deny"
string_add = "deny"
assertions_on_constants = "deny"
useless_asref = "deny"
shadow_unrelated = "deny"
arithmetic_side_effects = "deny"
float_arithmetic = "deny"
box_collection = "deny"
unnecessary_box_returns = "deny"
trait_duplication_in_bounds = "deny"
single_char_lifetime_names = "deny"
format_push_string = "deny"
option_if_let_else = "deny"
manual_string_new = "deny"
flat_map_option = "deny"
